--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Imports */
-@import url('http://fonts.cdnfonts.com/css/circular-std');
+@import url('http://fonts.cdnfonts.com/css/circular-std?styles=17909,17910,17911,17912,17907,17908,17905,17906');
 
 /* RESET */
 * {
@@ -30,6 +30,14 @@
     background-color: rgb(20, 25, 34);
 }
 
+.text-white {
+    color: white;
+}
+
+.text-gray {
+    color: rgb(105, 105, 105);
+}
+
 /* HTML/Body behavior */
 body {
     font-family: 'Circular Std', sans-serif;
@@ -37,22 +45,105 @@ body {
 
 
 /* Desktop-First */
-/* Main */
+/* ! Main */
 main {
     width: 100vw;
     height: 92vh;
 }
 
+/* * Sidenav */
 main nav.sidenav {
     height: 100%;
     width: 17vw;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main nav.sidenav div.navigation {
+    flex-direction: column;
 }
 
 main nav.sidenav div.navigation img {
-    width: 100%;
-    padding: 0.5rem 3.5rem;
+    width: 55%;
+    margin: .5rem auto;
 }
 
+main nav.sidenav div.navigation ul li {
+    margin-top: .5rem;
+    border-left: solid 2px black;
+}
+
+main nav.sidenav div.navigation ul li.active {
+    border-left: solid 2px greenyellow;
+}
+
+main nav.sidenav div.navigation ul li a {
+    text-decoration: none;
+    font-weight: 450;
+    font-size: 12px;
+}
+
+main nav.sidenav div.navigation ul li a i {
+    margin: 0 .3rem;
+}
+
+main nav.sidenav div.navigation>p {
+    text-transform: uppercase;
+    font-size: 12px;
+
+    margin: 1rem .2rem;
+}
+
+main nav.sidenav div.navigation ul.playlist li {
+    font-size: 12px;
+    margin-bottom: 1rem;
+}
+
+main nav.sidenav div.navigation ul.playlist li i {
+    font-size: 20px;
+    background-color: rgb(199, 199, 199);
+    padding: .2rem .25rem;
+    height: 100%;
+    margin-left: 0;
+    color: black;
+}
+
+main nav.sidenav div.profile-option {
+    width: 100%;
+    /* height: 8vh; */
+
+    padding: .7rem;
+
+
+}
+
+main nav.sidenav div.profile-option div.install {
+    border-bottom: 1px solid gray;
+    padding: 10px 0;
+    font-size: 12px;
+}
+
+main nav.sidenav div.profile-option div.install {
+    border-bottom: 1px solid gray;
+    padding: 10px 0;
+}
+
+main nav.sidenav div.profile-option div.install i.fas.fa-arrow-circle-down {
+    margin-right: .2rem;
+}
+
+main nav.sidenav div.profile-option div.profile {
+    padding: 10px 0 0 0;
+}
+
+main nav.sidenav div.profile-option div.profile i.fas.fa-user {
+    background-color: rgb(105, 105, 105);
+    padding: .4rem;
+    border-radius: 50%;
+}
+
+
+/* * Main Section */
 main section.main-section {
     height: 100%;
     width: 83vw;
@@ -73,7 +164,6 @@ main section.main-section div.call-to-action {
 }
 
 main section.main-section div.call-to-action a.call-btn {
-    color: white;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
