--- a/css/style.css
+++ b/css/style.css
@@ -63,15 +63,13 @@ input[type="range"]::-webkit-slider-thumb {
     width: 10px;
     height: 10px;
 
-    background: white;
+    color: white;
 }
 
 input[type="range"]::-moz-range-thumb {
-    -webkit-appearance: none;
-    appearance: none;
     width: 10px;
     height: 10px;
-    background: white;
+    color: white;
 }
 
 /* Desktop-First */
@@ -84,7 +82,7 @@ main {
 /* * Sidenav */
 main nav.sidenav {
     height: 100%;
-    width: 250px;
+    flex-basis: 250px;
     min-height: 134px;
     flex-direction: column;
     justify-content: space-between;
@@ -194,7 +192,8 @@ main section.main-section div.call-to-action {
     left: 0;
 
     width: 100%;
-    height: 8vh;
+    height: 75px;
+    min-height: 75px;
 
     background-color: rgba(0, 0, 0, 0.363);
 
