--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,38 @@ main section.main-section div.music div.carousel div.album img {
     width: 100%;
 }
 
+main section.main-section div.music div.carousel div.album div.hover {
+    display: none;
+    position: absolute;
+
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+
+    background-color: rgba(0, 0, 0, 0.4);
+
+    font-size: 50px;
+}
+
+main section.main-section div.music#artists div.carousel div.album div.hover {
+    border-radius: 50%;
+}
+
+main section.main-section div.music div.carousel div.album:hover div.hover {
+    display: inherit;
+}
+
+main section.main-section div.music div.carousel div.album div.image i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+}
+
 main section.main-section div.music#artists div.carousel div.album img {
     border-radius: 50%;
 }
