--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,11 @@ main nav.sidenav div.navigation img {
     margin: .5rem auto;
 }
 
+main nav.sidenav div.navigation img#small-logo {
+    display: none;
+}
+
+
 main nav.sidenav div.navigation ul li {
     margin-top: .5rem;
     border-left: solid 2px black;
@@ -118,7 +123,7 @@ main nav.sidenav div.navigation ul li a {
     line-height: 30px;
 }
 
-main nav.sidenav div.navigation ul li a img {
+main nav.sidenav div.navigation ul li img {
 
     width: 35px;
 
@@ -231,6 +236,7 @@ main section.main-section div.categories {
     margin-top: 75px;
     margin-bottom: 4rem;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 main section.main-section div.categories ul {
@@ -436,15 +442,44 @@ footer#controls div#control-player i {
 
 
 /* Lg Screen */
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
     main section.main-section div.music div.carousel div.album {
         width: calc(100% / 4 - 1.5rem);
+    }
+
+    footer#controls div#control-player {
+        margin-right: 0px;
+        padding-left: 10px;
     }
 }
 
 /* Md Screen */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
     main section.main-section div.music div.carousel div.album {
         width: calc(100% / 2 - 1.5rem);
+    }
+}
+
+/* Sm Screen */
+@media screen and (max-width: 768px) {
+
+    main nav.sidenav div.navigation img#big-logo,
+    main nav.sidenav div.navigation ul li a,
+    main nav.sidenav div.navigation>p,
+    main nav.sidenav div.navigation ul.playlist,
+    main nav.sidenav div.profile-option {
+        display: none;
+    }
+
+    main nav.sidenav div.navigation img#small-logo {
+        display: block;
+    }
+
+    main nav.sidenav {
+        flex-basis: 40px;
+    }
+
+    main section.main-section {
+        width: calc(100% - 40px);
     }
 }
